添加新的maven笔记

--- a/Maven/初步了解.md
+++ b/Maven/初步了解.md
@@ -1,37 +1,106 @@
-# Maven初识
+## Maven是做什么用的？##
+<br/>
+		Maven 是一个项目管理和构建自动化工具。但是对于我们程序员来说，我们最关心的是它的项目构建功能。所以这里我们介绍的就是怎样用 maven 来满足我们项目的日常需要。
+	
+Maven 使用惯例优于配置的原则。它要求在没有定制之前，所有的项目都有如下的结构：
+	
 
-## 二级标题
 
-### 三级标题
+| 目录 | 目的 | 
+| ------------ | ------------- |
+| ${basedir} | 存放 pom.xml和所有的子目录  |
+| ${basedir}/src/main/java | 项目的 java源代码  |
+| ${basedir}/src/main/resources | 项目的资源，比如说 property文件  |
+| ${basedir}/src/test/java | 项目的测试类，比如说 JUnit代码 |
+| ${basedir}/src/test/resources | 测试使用的资源  |
 
+## Maven建立的文件目录结构 ##
+<br/>
+通过使用下面的命令创建了如下Maven文件目录:<br/>
 
-######无序列表
-* 1
-* 2
-* 3
+<code>mvn archetype:generate \\<br/>
+-DgroupId=com.mycompany.app \\<br/>
+-DartifactId=my-app \\<br/>
+ -Dversion=1.0 \\<br/>
+-DarchetypeArtifactId=maven-archetype-quickstart <br/><br/>
+</code>
+![Maven]( http://cl.ly/0Z1i22060A0P/Image%202015-12-14%20at%2010.41.00.png )<br/>
 
-#### 有序列表
+*		maven 的 archetype 插件建立了一个 my-app 目录，这个名字来自 artifactId 。在这个目录下面，有一个 Project Object Model(POM) 文件 pom.xml 。这个文件用于描述项目，配置插件和管理依赖关系。
+*		源代码和资源文件放在 src/main 下面;而测试代码和资源放在 src/test 下面;resource资源，如配置文件等放在src/main/resource下面；
+*		Maven假定你想要把编译好的字节码放到 /target/classes,在 /target 创建一个可分发的 JAR 文件。
+![Maven]( http://cl.ly/1Z351I3S2T1N/Image%202015-12-14%20at%2016.15.55.png )<br/>
 
-> 例如这样
+		这段代码中最重要的是包含groupId, artifactId 和 version 的三行。这三个元素定义了一个项目基本的坐标;groupId 定义了项目属于哪个组，这个组往往和项目所在的组织或公司存在关联。譬如在googlecode上建立了一个名为myapp的项目，那么groupId就应该是com.googlecode.myapp;     artifactId 定义了当前Maven项目在组织中唯一的ID, 可以理解为项目中的模块, 模块为Maven中最小单位构件;    version定义了项目的版本。
 
-![alt text](/path/img.jpg "Title")
+## 简单的Maven命令 ##
+1. **编译：** compile<br/>
+		*	在cmd中，将目录切换到my-app-simple下，执行mvn clean compile，build success之后我们会在my-app-simple下看到新增了一个target目录，该目录下存放项目编译后的文件，如.class文件。
+2. **清理：** clean<br/>
+		*	cmd目录my-app-simple下执行命令 mvn clean，会将target文件删除，即清理项目，该命令可以结合其他命令运行。
+3. **测试：** test<br/>
+		*	cmd目录my-app-simple下执行命令 mvn test，会执行src/test/java 下的Junit 测试代码，当然在执行测试之前会自动执行编译命令。
+4. **打包：** package<br/>
+		*	cmd目录my-app-simple下执行命令 mvn package，会将项目打成jar包，并放在target目录中，执行此命令之前会先执行编译和测试命令。
+5. **安装：** install<br/>
+		*	cmd目录my-app-simple下执行命令 mvn install，会将项目jar包安装到本地仓库中，以便其他项目使用，执行此命令之前会先执行编译，测试，打包命令。
+<br/>
 
-**这是粗体**
-__这是粗体__
+## Maven的生命周期 ##
+		Maven拥有三套相互独立的生命周期，它们分别为clean，default和site。 每个生命周期包含一些阶段，这些阶段是有顺序的，并且后面的阶段依赖于前面的阶段，用户和Maven最直接的交互方式就是调用这些生命周期阶段。 以clean生命周期为例，它包含的阶段有pre-clean, clean 和 post clean。当用户调用pre-clean的时候，只有pre-clean得以执行，当用户调用clean的时候，pre-clean和clean阶段会得以顺序执行；当用户调用post-clean的时候，pre-clean,clean,post-clean会得以顺序执行。 较之于生命周期阶段的前后依赖关系，三套生命周期本身是相互独立的，用户可以仅仅调用clean生命周期的某个阶段，或者仅仅调用default生命周期的某个阶段，而不会对其他生命周期产生任何影响。 
 
-An [example](http://url.com/ "Title")
+1. **clean 生命周期** <br/>
+	clean生命周期的目的是清理项目，阶段如下：
+       1. pre-clean 验证项目是否正确和所有需要的相关资源是否可用
+       2. clean 清理上一次构建生成的文件。
+       3. post-clean 执行一些清理后需要完成的工作。
+2. **default 生命周期** <br/>
+	default生命周期定义了真正构件时所需要执行的所有步骤，它是生命周期中最核心的部分，它包含的阶段如下：
+       1. validate 验证项目是否正确和所有需要的相关资源是否可用
+       2. initialize 初始化构建
+       3. generate-sources
+       4. process-sources 处理源代码
+       5. generate-resources 
+       6. process-resources 处理项目主资源文件。对src/main/resources目录的内容进行变量替换等工作后，复制到项目输出的主classpath目录中。
+       7. compile 编译项目的主源代码
+       8. process-classes
+       9. generate-test-sources
+       10. process-test-sources 处理项目测试资源文件
+       11. generate-test-resources
+       12. process-test-resources 处理测试的资源文件
+       13. test-compile 编译项目的测试代码
+       14. process-test-classes
+       15. test 使用单元测试框架运行测试，测试代码不会被打包或部署
+       16. prepare-package 做好打包的准备
+       17. package 接受编译好的代码，打包成可发布的格式
+       18. pre-integration-test
+       19. integration-test
+       20. post integration-test
+       21. verify
+       22. install 将包安装到Maven本地仓库，供本地其他Maven项目使用
+       23. deploy 将最终的包复制到远程仓库，供其他开发人员和Maven项目使用
+       
+3. **site 生命周期** <br/>
+	site生命周期的目的是建立和发布项目站点，Maven能够基于POM所包含的信息，自动生成一个友好的站点，方便团队交流和发布项目信息。该生命周期包含阶段如下：
+       1. pre-site 执行一些在生成项目站点之前需要完成的工作
+       2. site 生成项目站点文档
+       3. post-site 执行一些在生成项目站点之后需要完成的工作
+       4. site-deploy 将生成的项目站点发布到服务器上
 
-An [examle][id]. Then, anywhere
-else in the doc, define the link:
-
-An email <example@example.com> link.
-
-  [id]: http://example.com/  "Title"
-
-| Tables        | Are           | Cool  |
-| ------------- |:-------------:| -----:|
-| col 3 is      | right-aligned | $1600 |
-| col 2 is      | centered      |   $12 |
-| zebra stripes | are neat      |    $1 |
-
-***
+## Maven 坐标详解 ##
+1. ###为什么要定义Maven坐标 ###
+		在我们开发Maven项目的时候，需要为其定义适当的坐标，这是Maven强制要求的。在这个基础上，其他Maven项目才能应用该项目生成的构件。 
+2. ###Maven坐标详解 ###
+		Maven坐标为各种构件引入了秩序，任何一个构件都必须明确定义自己的坐标，而一组Maven坐标是通过一些元素定义的，它们是groupId,artifactId,version,packaging,class-sifer。下面是一组坐标定义：		
+	*		<groupId>com.mycompany.app</groupId>
+				<artifactId>my-app</artifactId>
+				<packaging>jar</packaging>
+			<version>0.0.1-SNAPSHOT</version>
+3. ###artifactId###
+		该元素定义当前实际项目中的一个Maven项目（模块），推荐的做法是使用实际项目名称作为artifactId的前缀。比如上例中的my-app。
+4. ###version###
+		该元素定义Maven项目当前的版本
+5. ###packaging###
+		定义Maven项目打包的方式，首先，打包方式通常与所生成构件的文件扩展名对应，如上例中的packaging为jar,最终的文件名为my-app-0.0.1-SNAPSHOT.jar。也可以打包成war, ear等。当不定义packaging的时候，Maven 会使用默认值jar
+6. ###classifier###
+		该元素用来帮助定义构建输出的一些附件。附属构件与主构件对应，如上例中的主构件为my-app-0.0.1-SNAPSHOT.jar,该项目可能还会通过一些插件生成如my-app-0.0.1-SNAPSHOT-javadoc.jar,my-app-0.0.1-SNAPSHOT-sources.jar, 这样附属构件也就拥有了自己唯一的坐标
